--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Benjamin Scott Hawn was formed in the final moments of a collapsing star.
 
 <p style = "text-align:center">
 
-CONTACT: benjaminhawn@icloud.com
+CONTACT: ben@benjaminhawn.com
 
 </p>
 
