--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 
 --- <a href="https://twitter.com/benjaminhawn" target="_blank" style="color:#1DA1F2;text-decoration:none">twitter</a> -----------------------------<br>
 
--------------- <a href="https://instagram.com/benjaminhawn" target="_blank" style="color:#E1306C;text-decoration:none">instagram</a> ----------------<br>
+------------------- <a href="https://github.com/benjaminhawn" target="_blank" style="color:#E1306C;text-decoration:none">github</a> ----------------------<br>
 
 ---------------------------- <a href="https://linkedin.com/in/bhawn" target="_blank" style="color:##0072B1;text-decoration:none">linkedin</a> ---<br>
 
