--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ Benjamin Scott Hawn is a data analyst in Detroit, MI. He studied physics and mat
 
 * * RESEARCH * * <br><br>
 
-<a href="https://meetings.aps.org/Meeting/MAR20/Session/C71.48" target="_blank" style="color:#0c5449;text-decoration:none">APS March Meeting 2020</a><br><br>
+<a href="https://meetings.aps.org/Meeting/MAR20/Session/C71.48" target="_blank" style="color:#ce2029;text-decoration:none">APS March Meeting 2020</a><br><br>
 
-<a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.105.054504" target="_blank" style="color:#0c5449;text-decoration:none">Physical Review B</a><br><br>
+<a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.105.054504" target="_blank" style="color:#ce2029;text-decoration:none">Physical Review B</a><br><br>
 
 </p>
 
