--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 
 ---------------------------- <a href="https://linkedin.com/in/bhawn" target="_blank" style="color:#0072B1;text-decoration:none">linkedin</a> ---<br>
 
------------------------------------------<br>
+--------------------------------------<a href="html/secret_page.html" target="_blank" style="color:#000000;text-decoration:none">---</a><br>
 </p>
 
 
