--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 <body>
 
 <p style = "text-align:center;">
------------------------------------------<br>
+----------------------------------------<a href="html/secret_page.html" target="_self" style="color:#000000;text-decoration:none">-</a><br>
 
 --------- "BENJAMIN SCOTT HAWN" ---------<br>
 
 -----------------------------------------<br>
 
---- <a href="https://twitter.com/benjaminhawn" target="_blank" style="color:#1DA1F2;text-decoration:none">twitter</a> ----------------------------<a href="html/secret_page.html" target="_blank" style="color:#000000;text-decoration:none">-</a><br>
+--- <a href="https://twitter.com/benjaminhawn" target="_blank" style="color:#1DA1F2;text-decoration:none">twitter</a> -----------------------------<br>
 
 ----------------- <a href="https://github.com/benjaminhawn" target="_blank" style="color:#6e5494;text-decoration:none">github</a> ----------------<br>
 
