--- a/html/secret_page.html
+++ b/html/secret_page.html
@@ -19,7 +19,7 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 
 -----------------------------------------<br>
 
---- <a href="https://benjaminhawn.com" target="_blank" style="color:#1DA1F2;text-decoration:none">home</a> --------------------------------<br>
+--- <a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none">home</a> --------------------------------<br>
 
 -----------------------------------------<br>
 
@@ -28,7 +28,7 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 -----------------------------------------<br>
 </p>
 
-<p style = "text-align:justify;">
+<p style = "text-align:center;">
 
 Welcome to the secret page!
 
