--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 <body>
 
 <p style = "text-align:center;">
-----------------------------------------<a href="html/secret_page.html" target="_self" style="color:#000000;text-decoration:none">-</a><br>
+----------------------------------------<a href="html/secret-page" target="_self" style="color:#000000;text-decoration:none">-</a><br>
 
 --------- "BENJAMIN SCOTT HAWN" ---------<br>
 
