--- a/blog.html
+++ b/blog.html
@@ -21,9 +21,9 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 
 ---<a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none"> home </a>--------------------------------<br>
 
---------------------<a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none"> home </a>------------------<br>
+-----------------<a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none"> home </a>------------------<br>
 
-----------------------------------<a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none"> home </a>---<br>
+--------------------------------<a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none"> home </a>---<br>
 
 -----------------------------------------<br>
 </p>
