--- a/blog.html
+++ b/blog.html
@@ -36,21 +36,20 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 
 <p style = "text-align:left;">
 
-<a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none">Entry 1</a><br>
+2022-11-17: <a href="https://benjaminhawn.com/blog/my-first-blog-post" target="_self" style="color:#ce2029;text-decoration:none">"My First Blogpost"</a><br><br>
 
-<a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none">Entry 2</a><br>
+<a href="https://benjaminhawn.com" target="_self" style="color:#ce2029;text-decoration:none">Entry 2</a><br><br>
 
-<a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none">Entry 3</a><br>
+<a href="https://benjaminhawn.com" target="_self" style="color:#ce2029;text-decoration:none">Entry 3</a><br><br>
 
 <br><br>
 
 </p>
-
-CONTACT: ben@benjaminhawn.com
-
-</p>
-
+  
 <p style = "text-align:center;">
+
+CONTACT: ben@benjaminhawn.com<br><br>
+
 (c) 2022
 </p>
 
