--- a/blog.html
+++ b/blog.html
@@ -15,15 +15,15 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 <p style = "text-align:center;">
 -----------------------------------------<br>
 
------------------ BLOG! -----------------<br>
+--------- <a href="https://benjaminhawn.com" target="_self" style="color:#000000,text-decoration:none">"BENJAMIN SCOTT HAWN"</a> ---------<br>
 
 -----------------------------------------<br>
 
----<a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none"> home </a>--------------------------------<br>
+--- <a href="https://twitter.com/benjaminhawn" target="_blank" style="color:#1DA1F2;text-decoration:none">twitter</a> -----------------------------<br>
 
------------------<a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none"> home </a>------------------<br>
+----------------- <a href="https://github.com/benjaminhawn" target="_blank" style="color:#6e5494;text-decoration:none">github</a> ----------------<br>
 
---------------------------------<a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none"> home </a>---<br>
+---------------------------- <a href="https://linkedin.com/in/bhawn" target="_blank" style="color:#0072B1;text-decoration:none">linkedin</a> ---<br>
 
 -----------------------------------------<br>
 </p>
@@ -37,12 +37,6 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 <p style = "text-align:left;">
 
 2022-11-17: <a href="https://benjaminhawn.com/blog/my-first-blog-post" target="_self" style="color:#ce2029;text-decoration:none">"My First Blogpost"</a><br><br>
-
-<a href="https://benjaminhawn.com" target="_self" style="color:#ce2029;text-decoration:none">Entry 2</a><br><br>
-
-<a href="https://benjaminhawn.com" target="_self" style="color:#ce2029;text-decoration:none">Entry 3</a><br><br>
-
-<br><br>
 
 </p>
   
