--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 
 <p style = "text-align:center;">
 <br>
-* * ENTRIES * *
+* * BLOG * *
 </p>
 
 <p style = "text-align:left;">
