--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 <p style = "text-align:center;">
 -----------------------------------------<br>
 
---------- <a href="https://benjaminhawn.com" target="_self" style="color:#000000,text-decoration:none">"BENJAMIN SCOTT HAWN"</a> ---------<br>
+--------- <a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none">"BENJAMIN SCOTT HAWN"</a> ---------<br>
 
 -----------------------------------------<br>
 
