--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 
 <p style = "text-align:justify;">
 
-Benjamin Scott Hawn is a data analyst in Detroit, MI. He studied physics and mathematics at Wayne State University, where he conducted research in the properties and applications of condensed matter. Most of the time you can find him in a pair of light-wash jeans, a blue t-shirt, and his signature ballcap. He enjoys running, playing disc golf, and making music.
+Benjamin Scott Hawn is a data analyst in Detroit, MI. He studied physics and mathematics at Wayne State University, where he conducted research in the properties and applications of condensed matter. Most of the time you can find him in a pair of light-wash jeans, a blue t-shirt, and his signature ballcap. He enjoys running, making music, and cooking for his friends.
 
 <br><br>
 
