--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Benjamin Scott Hawn is a data analyst in Detroit, MI. He studied physics and mat
 
 <p style = "text-align:center">
 
-CONTACT: ben@benjaminhawn.com
+CONTACT: <a href=mailto:ben@benjaminhawn.com style="color:#000000;text-decoration:none">ben@benjaminhawn.com</a><br><br>
 
 </p>
 
