--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
   
 <p style = "text-align:center;">
 
-CONTACT: ben@benjaminhawn.com<br><br>
+CONTACT: <a href=mailto:ben@benjaminhawn.com style="color:#000000;text-decoration:none">ben@benjaminhawn.com</a><br><br>
 
 (c) 2022
 </p>
