--- a/html/secret-page.html
+++ b/html/secret-page.html
@@ -38,7 +38,7 @@ Welcome to the secret page!
 
 <p style = "text-align:center">
 
-CONTACT: ben@benjaminhawn.com
+CONTACT: <a href=mailto:ben@benjaminhawn.com style="color:#000000;text-decoration:none">ben@benjaminhawn.com</a><br><br>
 
 </p>
 
