--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 </style>
 
 <head>
-  <title>Home</title>
+  <title>Benjamin Hawn</title>
 </head>
 
 <body>
