--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@ body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 </style>
 
 <head>
-  <title>Blog</title>
+  <title>Portfolio</title>
 </head>
 
 <body>
