--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
 <style>
-body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
+body {max-width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 </style>
 
 <head>
