--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <html>
 
-<meta content='width=device-width, initial-scale=1' name='viewport'/>
+<meta content='width=device-width, initial-scale=0.9' name='viewport'/>
 <style>
-body {max-width:395px;font-family:courier;font-size:16px;font-style:oblique;}
+body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 </style>
 
 <head>
