--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 
-<meta content='width=device-width, initial-scale=1', shrink-to-fit=no name='viewport'/>
+<meta content='width=device-width, initial-scale=1, shrink-to-fit=no' name='viewport'/>
 <style>
 body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 </style>
