--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 
-<meta name='viewport' content='initial-scale=1' />
+<meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
 <style>
 body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 </style>
