--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
 <style>
-body {max-width:395px;font-family:courier;font-size:16px;font-style:oblique;}
+body {padding-right:0px;max-width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 </style>
 
 <head>
@@ -14,19 +14,19 @@ body {max-width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 <body>
 
 <p style = "text-align:center;">
----------------------------------------<br>
+-----------------------------------------<br>
 
--------- <a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none">"BENJAMIN SCOTT HAWN"</a> --------<br>
+--------- <a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none">"BENJAMIN SCOTT HAWN"</a> ---------<br>
 
----------------------------------------<br>
+-----------------------------------------<br>
 
---- <a href="https://twitter.com/benjaminhawn" target="_blank" style="color:#1DA1F2;text-decoration:none">twitter</a> ---------------------------<br>
+--- <a href="https://twitter.com/benjaminhawn" target="_blank" style="color:#1DA1F2;text-decoration:none">twitter</a> -----------------------------<br>
 
----------------- <a href="https://github.com/benjaminhawn" target="_blank" style="color:#6e5494;text-decoration:none">github</a> ---------------<br>
+----------------- <a href="https://github.com/benjaminhawn" target="_blank" style="color:#6e5494;text-decoration:none">github</a> ----------------<br>
 
--------------------------- <a href="https://linkedin.com/in/bhawn" target="_blank" style="color:#0072B1;text-decoration:none">linkedin</a> ---<br>
+---------------------------- <a href="https://linkedin.com/in/bhawn" target="_blank" style="color:#0072B1;text-decoration:none">linkedin</a> ---<br>
 
----------------------------------------<br>
+-----------------------------------------<br>
 </p>
 
 
