--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
 <style>
-body {padding-left:0px;padding-right:0px;width:395px;font-family:courier;font-size:16px;font-style:oblique;}
+body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
 </style>
 
 <head>
