--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 
 <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
 <style>
-body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
+body {
+  width:395px;
+  font-family:courier;
+  font-size:16px;
+  font-style:oblique;
+  overflow-x:hidden;
+}
 </style>
 
 <head>
