--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta name='viewport' content='width=device-width, initial-scale=1' />
 <style>
 body {
-  width:395px;
+  width:100%;
+  max-width:395px;
   font-family:courier;
   font-size:16px;
   font-style:oblique;
