--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@ body {
   font-family:courier;
   font-size:16px;
   font-style:oblique;
+  margin: 0px 0px 0px 0px;
+  padding-top: 0px;
+  padding-right: 8px;
+  padding-bottom: 0px;
+  padding-left: 8px;
 }
 </style>
 
