--- a/index.html
+++ b/index.html
@@ -3,23 +3,10 @@
 <html>
 
 <meta name='viewport' content='width=device-width, initial-scale=1' />
-<style>
-body {
-  width:100%;
-  max-width:377px;
-  font-family:courier;
-  font-size:16px;
-  font-style:oblique;
-  margin: 0px 0px 0px 0px;
-  padding-top: 0px;
-  padding-right: 8px;
-  padding-bottom: 0px;
-  padding-left: 8px;
-}
-</style>
 
 <head>
   <title>Benjamin Hawn</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
