--- a/blog.html
+++ b/blog.html
@@ -2,13 +2,10 @@
 
 <html>
 
-<meta content='width=device-width, initial-scale=1' name='viewport'/>
-<style>
-body {width:395px;font-family:courier;font-size:16px;font-style:oblique;}
-</style>
-
 <head>
   <title>Blog</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1' />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
