--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p style = "text-align:justify;">
 
-Benjamin Scott Hawn is a data analyst in Detroit, MI. He studied physics and mathematics at Wayne State University, where he conducted research in the properties and applications of condensed matter. Most of the time you can find him in a pair of light-wash jeans, a blue t-shirt, and his signature ballcap. He enjoys running, making music, and cooking for his friends.
+Benjamin Scott Hawn is a ******* in Detroit, MI. He studied physics and mathematics at Wayne State University, where he conducted research in the properties and applications of condensed matter. He can be identified by his well-worn jeans, blue t-shirts, and his signature ballcaps. He enjoys running, making music, and cooking for his friends.
 
 <br><br>
 
