--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p style = "text-align:justify;">
 
-Benjamin Scott Hawn is a data professional and self-styled writer in Detroit, MI. He studied physics and mathematics at Wayne State University, where he conducted research in the properties and applications of condensed matter. He can be identified by his well-worn jeans, blue t-shirts, and signature ballcaps. He enjoys running, making music, and cooking for his friends.
+Benjamin Scott Hawn is a data professional and self-styled writer in Detroit, MI. He studied physics and mathematics at Wayne State University, where he conducted research in the properties and applications of condensed matter. He can be identified by his well-worn jeans, blue t-shirts, and signature ballcaps. He enjoys wrenching on his motorcycle, making music, and cooking for his friends.
 
 <br><br>
 
