--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Benjamin Hawn</title>
+  <title>Benjamin Hawn Dot Com</title>
   <meta name='viewport' content='width=device-width, initial-scale=1' />
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
@@ -13,13 +13,13 @@
 <p style = "text-align:center;">
 ---------------------------------------<br>
 
--------- <a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none">"BENJAMIN SCOTT HAWN"</a> --------<br>
+--- <a href="https://benjaminhawn.com" target="_self" style="color:#000000;text-decoration:none">"BENJAMIN SCOTT HAWN"</a> -------------<br>
 
 ---------------------------------------<br>
 
---- <a href="https://twitter.com/benjaminhawn" target="_blank" style="color:#1DA1F2;text-decoration:none">twitter</a> ---------------------------<br>
+---------------------------------------<br>
 
---------------- <a href="https://github.com/benjaminhawn" target="_blank" style="color:#6e5494;text-decoration:none">github</a> ----------------<br>
+---------------------------------------<br>
 
 -------------------------- <a href="https://linkedin.com/in/bhawn" target="_blank" style="color:#0072B1;text-decoration:none">linkedin</a> ---<br>
 
@@ -33,7 +33,7 @@
 
 <p style = "text-align:justify;">
 
-Benjamin Scott Hawn is a data professional and self-styled writer in Detroit, MI. He studied physics and mathematics at Wayne State University, where he conducted research in the properties and applications of condensed matter. He can be identified by his well-worn jeans, blue t-shirts, and signature ballcaps. He enjoys wrenching on his motorcycle, making music, and cooking for his friends.
+Benjamin Scott Hawn is a data professional in Detroit, MI. He studied physics and mathematics at Wayne State University, where he conducted research in the properties and applications of condensed matter. He can be identified by his well-worn jeans, blue t-shirts, and signature ballcaps. He enjoys wrenching on his motorcycle, making music, and cooking for his friends.
 
 <br><br>
 
@@ -56,7 +56,7 @@ CONTACT: <a href=mailto:ben@benjaminhawn.com style="color:#000000;text-decoratio
 </p>
 
 <p style = "text-align:center;">
-(c) 2023
+(c) 2024
 </p>
 
 </body>
