--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 ---------------------------------------<br>
 
--------------------------- <a href="https://linkedin.com/in/bhawn" target="_blank" style="color:#0072B1;text-decoration:none">linkedin</a> ---<br>
+--- <a href="https://github.com/benjaminhawn" target="_blank" style="color:#8250DF;text-decoration:none">github</a> --------------- <a href="https://linkedin.com/in/bhawn" target="_blank" style="color:#0072B1;text-decoration:none">linkedin</a> ---<br>
 
 ---------------------------------------<br>
 </p>
