--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Benjamin Scott Hawn is a data professional in Detroit, MI. He studied physics an
 
 <p style = "text-align:center">
 
-CONTACT: <a href="mailto:ben@benjaminhawn.com?subject=Hello%20There!" style="color:#000000;text-decoration:none">ben at benjaminhawn dot com</a><br><br>
+CONTACT: ben at benjaminhawn dot com<br><br>
 
 </p>
 
